[package]
name = "screen_test"
version = "0.2.0"
edition = "2024"

[dependencies]
# Cortex-M
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
#rp235x-hal = { version = "0.4.0", features = ["dcp-fast-f64"] } # https://github.com/rp-rs/rp-hal/tree/main/rp235x-hal

# screen driver - my modified local version
st7565 = { path = "../st7565" }

# Panic handler
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

# Embassy
embassy-executor = { version = "0.9", features = [
  "arch-cortex-m", 
  "executor-thread", 
  "defmt"
] }

embassy-time = "0.5.1"
embassy-rp = { version = "0.10.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  "rom-func-cache",
  "rom-v2-intrinsics",   # Supposed to enable the new rom-v2 intrinsics, but doesn't seem to work yet 
] }


# Defmt logging:
defmt = "1.0.1"
defmt-rtt = "1.1.0"
display-interface-spi = "0.5.0"
embassy-embedded-hal = "0.6.0"
embassy-sync = "0.8.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
heapless = "0.9.3"
num-traits = { version = "0.2", default-features = false, features = ["i128"] }
libm = "0.2.16"



# num-traits = "0.2.19"
# typenum = "1.11.2"

[[bin]]
name = "screen_test"    # Takes away an error about test, which doesn't
harness = false         # work in nostd